GNOME Bugzilla – Bug 727144
Properties dialogs use the wrong header bar style
Last modified: 2014-03-27 12:51:19 UTC
Properties dialogs for bluetooth devices have a blue "Done" button in one corner. Since they are presentation dialogs [1], they should have a close button instead. [1] https://wiki.gnome.org/Design/HIG/Dialogs#Presentation_Dialogs
commit 904bdbd4341ac12c7977ce6cd0afb5b014aa526e Author: Bastien Nocera <hadess@hadess.net> Date: Thu Mar 27 13:47:19 2014 +0100 settings: Fix properties dialog bugs Due to changes in GTK+, the title wasn't shown. Revert to using the GTK_DIALOG_USE_HEADER_BAR flag to create the dialog, using the dialog's title instead of our own widget, and letting GTK+ create a close button for us instead of using the "Done" button. https://bugzilla.gnome.org/show_bug.cgi?id=727144 See also: https://bugzilla.gnome.org/show_bug.cgi?id=727145