settings: Fix properties dialog bugs

Due to changes in GTK+, the title wasn't shown. Revert to using
the GTK_DIALOG_USE_HEADER_BAR flag to create the dialog, using
the dialog's title instead of our own widget, and letting
GTK+ create a close button for us instead of using the "Done" button.

https://bugzilla.gnome.org/show_bug.cgi?id=727144

See also: https://bugzilla.gnome.org/show_bug.cgi?id=727145